--- a/css/main.css
+++ b/css/main.css
@@ -97,12 +97,11 @@ body {
     margin-bottom: 70px;
 }
 
-/* Кнопка крассная
+/* Кнопочки
 =================================== */
 .btn {
     padding: 14px 50px;
     border: none;
-    background-color: #e84545;
     font-family: inherit;
     font-size: 13px;
     line-height: 1.6;
@@ -110,8 +109,17 @@ body {
     text-transform: uppercase;
     color: #fff;
     cursor: pointer;
+    border-radius: 1px;
 }
-
+.btn--red {
+    background-color: #e84545;
+}
+.btn--red:hover {
+    background-color: #cc2828;
+}
+.btn--download {
+    padding: 14px 83px;
+}
 /* Секция фичи - features
 =================================== */
 .features {
@@ -144,4 +152,225 @@ body {
     line-height: 1.5;
     font-weight: 300;
     text-align: center;
+}
+
+/* Секция работы - works
+=================================== */
+.works {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.works__item {
+    position: relative;
+    width: 25%;
+    height: 350px;
+    overflow: hidden;
+}
+.works__image {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    transform: translate3d(-50%, -50%, 0);
+}
+.works__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    background: #e84545;
+    opacity: 0;
+    transition: opacity .2s linear;
+}
+.works__item:hover .works__content {
+    opacity: .9;
+}
+.works__title {
+    color: #fff;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 7px;
+}
+.works__subtitle {
+    color: #fff;
+    font-weight: 300;
+    letter-spacing: 1.3px;
+}
+
+/* Секция команда - team
+=================================== */
+.team {
+    padding: 100px 0;
+}
+.team__inner {
+    display: flex;
+    flex-wrap: wrap;
+}
+.team__item {
+    width: 270px;
+}
+.team__item + .team__item {
+    margin-left: 30px;
+}
+.teammate__photo {
+    display: block;
+    width: 100%;
+    margin-bottom: 32px;
+}
+.teammate__name {
+    font-size: 22px;
+    font-weight: 400;
+    color: #2d3033;
+    margin-bottom: 7px;
+}
+.teammate__function {
+    font-size: 13px;
+    font-weight: 400;
+    color: #e84545;
+    text-transform: uppercase;  
+    margin-bottom: 23px;  
+}
+.teammate__description {
+    font-size: 14px;
+    line-height: 1.5;
+    color: #6c7279;
+    margin-bottom: 30px;
+    /* margin: 0 25px 30px 0 ; */
+}
+
+/* Социальные кнопки - social
+=================================== */
+.social {
+    display: flex;
+}
+.social__link {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border: 1px solid #c6cacc;
+    transition: background-color .2s linear;
+}
+
+.social__icon {
+    fill: #c6cacc;
+    width: 20px;
+    height: 20px;
+    margin: auto;
+    transition: all .2s linear;
+}
+.social__link + .social__link {
+    margin-left: 3px;
+}
+.social__link:hover {
+    background-color: #c6cacc;
+}
+.social__link:hover .social__icon{
+    fill: #000;
+}
+
+/* Отзывы клиентов - Clients
+=================================== */
+.clients {
+    display: flex;
+    width: 100%;
+}
+.clients__photo {
+    display: block;
+    width: 50%;
+}
+.clients__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #53354a;
+    width: 50%;
+    padding: 0 200px 0 82px;
+}
+.clients__review {
+    font-family: 'Cardo', serif;
+    font-size: 36px;
+    line-height: 1.16;
+    color: #fff;
+    margin-bottom: 40px;
+}
+.clients__data {
+    font-size: 13px;
+    line-height: 1.16;
+    font-weight: 700;
+    color: #fff;  
+    text-transform: uppercase;  
+}
+
+/* Скачать продукт - downloads
+=================================== */
+.downloads {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 0;
+}
+.download__title {
+    font-size: 28px;
+    line-height: 1;
+    font-weight: 300;
+    margin-bottom: 12px;
+    color: #2d3033;
+}
+.download__slogan {
+    font-size: 13px;
+    line-height: 1;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 40px; 
+    color: #2d3033;   
+}
+
+/* Футер - footer
+=================================== */
+.footer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 70px 0;
+    background-color: #3a3e64;
+}
+.footer__data {
+    display: flex;
+}
+.footer__con {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 33.3333%;
+}
+.footer__data__title {
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #fff;
+    margin-bottom: 20px;
+}
+.address p {
+    font-size: 14px;
+    line-height: 1.7;
+    font-weight: 300;
+    color: #fff;
+}
+.footer__data_about {
+}
+.footer__copyright {
+}
+.footer__copyright__text {
 }
