--- a/css/main.css
+++ b/css/main.css
@@ -50,16 +50,49 @@ body {
     display: block;
 }
 .header__menu-con {
+    position: relative;
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100px;
     border-bottom: 1px solid #4c5069;
 }
+.header__menu-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+.header__menu-con.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    border: none;
+    background-color: #2b324f;
+    height: 61px;
+    z-index: 3;
+}
 .header__menu {
     display: flex;
     align-items: center;
+}
+.header__menu.show {
+    position: absolute;
+    flex-direction: column;
+    align-items: stretch;
+    bottom: -195px;
+    right: 0;
+    background-color: #2b324f;
+    z-index: 3;
+
+}
+.header__menu.show > .header__menu__link {
+    display: block;
+    padding: 12px 24px 12px 48px;
+    margin: 0;
 }
 .header__menu__link{
     text-transform: uppercase;
@@ -141,7 +174,8 @@ body {
 }
 .burger__item {
     display: block;
-    width: 100%;
+    margin-left: 10%;
+    width: 90%;
     height: 4px;
     background: #fff;
     border-radius: 2px;
@@ -151,18 +185,19 @@ body {
 .burger__item::after {
     content: "";
     position: absolute;
-    left: 0;
-    width: 100%;
+    right: 0;
     height: 4px;
     background: #fff;
     border-radius: 2px;    
 }
 .burger__item::before {
     top: 0px;
+    width: 100%;
     
 }
 .burger__item::after{
     bottom: 0;
+    width: 80%;
 }
 .burger:hover .burger__item {
     opacity: 1;
@@ -552,8 +587,7 @@ body {
     }    
 }   
 @media (max-width: 700px) {
-    /* Шапка */
-    /* Заголовок шапки и слоган */
+/* Шапка */
     .header__title {
         font-size: 40px;
     }
@@ -563,14 +597,14 @@ body {
     .header__intro {
         padding: 40px 0;
     }
-    /* Features - фичи */    
+/* Features - фичи */    
     .features {
         padding: 75px 0 0 0;
     }
     .features__item {
         width: 100%;
     } 
-    /* Works - работы */    
+/* Works - работы */    
     .works__item {
         width: 100%;
         height: 400px;
